# couchbase-lite-c-verify

./: .gitignore  README.md
.github/workflows/: verify_android.yml  verify_deb.yml  verify_ios.yml  verify_linux.yml  verify_macos.yml  verify_windows.yml
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/couchbase/tests/: CouchbaseLiteTest.java
android/app/src/main/cpp/: native-lib.cpp
android/scripts/: download_android.sh
desktop/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
desktop/scripts/: prepare_docker.sh  verify_deb.sh  verify_deb_prepare.sh  verify_linux_zip.sh  verify_macos.sh  verify_macos_zip.sh  verify_windows.ps1  verify_windows.sh
desktop/src/: main.cpp
ios/CBLC-Verify/: AppDelegate.h  SceneDelegate.h  Verification.mm  ViewController.h  ViewController.m  main.m
ios/CBLC-Verify.xcodeproj/: project.pbxproj
ios/CBLC-Verify.xcodeproj/xcshareddata/xcschemes/: CBLC-Verify.xcscheme
ios/CBLC-VerifyTests/: CBLC_VerifyTests.m
ios/scripts/: verify_ios.sh
lib/libcblite-3.1.0/include/cbl/: CBL_Edition.h
lib/libcblite-3.1.0/lib/: libcblite.3.dylib
lib/libcblite-3.1.0/lib/cmake/CouchbaseLite/: CouchbaseLiteTargets-minsizerel.cmake
scripts/: verify_macos.sh
src/: main.cpp
